--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
     margin: 0 auto;
     
 }
-/*=====page-header=====*/
+/* PAGE HEADER  */
+
 .page-header {
     width: 100%;
     background: #222222;
@@ -28,9 +29,6 @@ body {
     justify-content: space-between;
 }
 
-
-
-/*=====page-header-left=====*/
 .page-header-wrp-btn-left {
     width: 111px;
     padding-top: 18px;
@@ -38,9 +36,37 @@ body {
     align-items: flex-end;
     justify-content: space-between;
     padding-bottom: 19px;
+    align-items: center;
 }
 
-/*=====page-header-right=====*/
+.search {
+  display: flex;
+}
+
+.search-icon-form-label {
+  display: block;
+  width: 26px;
+  height: 26px;
+  background-image: url(../img/logo-left-2.svg);
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.search-icon-form-input {
+  width: 0;
+  height: 0;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  transition: width 1s;
+}
+
+.search-icon-form-input:focus {
+  border: 3px solid #F16D7F;
+  width: 150px;
+  height: 25px;
+}
+
 .page-header-wrp-btn-right {
     width: 168px;
     padding-top: 18px;
@@ -50,7 +76,7 @@ body {
     padding-bottom: 19px;
 }
 
-.menu-btn {
+/* .menu-btn {
     display: flex;
     width: 32px;
     height: 23px;
@@ -79,19 +105,78 @@ body {
 }
 
 .menu-btn-item::before {
-top: -10px;
+    top: -10px;
 }
 
 .menu-btn-item::after {
-top: 10px;
+    top: 10px;
+} */
+
+
+
+/* #switch-menu {
+    display: none;
 }
+#switch-menu:checked ~ .menu-list {
+    display: block;
+} 
+
+.menu-btn {
+    display: none;
+    width: 232px;
+    height: 764px;
+    background: #FFFFFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    box-sizing: border-box;
+}
+
+.menu-btn-label {
+    fill: #E8E8E8;;
+}
+
+
+/* .menu-btn-label svg:hover {
+    color: #F16D7F;
+} */
+
+/* .menu-list {
+
+}
+
+.menu-list-item {
+    list-style-type: none;
+
+}
+
+.menu-list-item a {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    text-transform: uppercase;
+}
+
+.menu-sublist {
+    list-style-type: none;
+}
+
+.menu-sublist-item {
+    list-style-type: none;
+}
+
+.menu-sublist-item a {
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    text-decoration: none;
+} */
 
 .account-btn {
     width: 29px;
     height: 29px;
     border: none;
     background-color: transparent;
-}
+} 
 
 
 .cart-btn {
@@ -117,10 +202,10 @@ top: 10px;
     align-items: center;
     justify-content: center;
 }
-/*=====end page-header=====*/
+/* END PAGE HEADER */
 
 
-/*=====banner=====*/
+/* BANNER */
 .banner {
     width: 100%;
     margin: 0 auto;
@@ -173,11 +258,11 @@ top: 10px;
 .banner-subtitle span {
     color: #F16D7F;
 }
-/*=====banner=====*/
+/* BANNER */
 
 
 
-/*=====categories=====*/
+/* CATEGORIES */
 .categories {
     display: flex;
     justify-content: center;
@@ -225,9 +310,9 @@ top: 10px;
 
 .categories-item-title, 
 .categories-item-subtitle{
-  display: block;
-  width: 100%;
-  text-transform: uppercase;
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
 }
 
 .categories-item-title {
@@ -243,11 +328,11 @@ top: 10px;
     text-align: center;
     color: #F16D7F;
 }
-/*=====end categories*=====/
+/* END CATEGORIES */
 
 
 
-/*=====products=====*/
+/* PRODUCTS */
 .products {
     max-width: 1140px;
     width: 100%;
@@ -295,6 +380,46 @@ top: 10px;
     text-decoration: none;
     box-sizing: border-box;
     margin: 0 0 30px 0;
+}
+
+.products-item-img-block {
+    position: relative;
+}
+
+.products-item-img-block-overlay {
+    position: absolute;
+    background: rgba(58, 56, 56, 0.8);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.products-item:hover .products-item-img-block-overlay {
+    opacity: 1;
+}
+
+.card-add {
+    width: 139px;
+    height: 44px;
+    background: transparent;
+    border: 1px solid #FFFFFF;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-add svg {
+    margin: 0 11px 0 0;
 }
 
 .products-item-img-2 {
@@ -351,11 +476,11 @@ top: 10px;
     background-color: #F16D7F;
     color:#FFFFFF;
 }
-/*=====end products=====*/
+/* PRODUCTS */
 
 
 
-/*=====features=====*/
+/* FEATURES */
 .features {
     max-width: 1600px;
     width: 100%;
@@ -399,16 +524,16 @@ margin: 0 0 28px 0;
     line-height: 17px;
     color: #FBFBFB;
 }
-/*=====end features=====*/
+/* END FEATURE */
 
 
 
-/*=====subscribe=====*/
+/* SUBSCRIBE */
 .subscribe {
     max-width: 1600px;
     min-height: 448px;
     background-image: linear-gradient(rgba(244,244,244, 0.7), rgba(244,244,244, 0.7)), 
-    url(img/Layer\ 41.png);
+    url(../img/Layer-41.png);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -492,11 +617,11 @@ margin: 0 0 28px 0;
     text-align: center;
     color: #FFFFFF;
 }
-/*=====end subscribe=====*/
+/* SUBSCRIBE */
 
 
 
-/*=====footer=====*/
+/* FOOTER */
 .page-footer {
     max-width: 1600px;
     width: 100%;
@@ -520,6 +645,12 @@ margin: 0 0 28px 0;
     width: 148px;
 }
 
+.fab:hover {
+    color: white;
+    background: #F16D7F;
+}
+
+
 .fab {
     width: 32px;
     height: 32px;
@@ -530,7 +661,7 @@ margin: 0 0 28px 0;
     justify-content: center;
     align-items: center;
 }
-/*=====end footer=====*/
+/* END FOOTER */
 
 
 
