--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,60 @@ body {
     text-decoration: none;
 } */
 
+.menu-btn-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 23px;
+}
+
+.menu-btn-span {
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #E8E8E8;
+    position: relative;
+}
+
+.menu-btn-span:after,
+.menu-btn-span:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #E8E8E8;
+    position: absolute;
+}
+
+.menu-btn-span:before {
+    top: -15px;
+    left: 0;
+}
+
+.menu-btn-span:after {
+    top: 15px;
+    left: 0;
+}
+
+input[type="checkbox"]:checked ~ .menu-btn-span {
+  background-color: transparent;
+}
+
+input[type="checkbox"]:checked ~ .menu-btn-span:before {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+input[type="checkbox"]:checked ~ .menu-btn-span:after {
+  transform: rotate(-45deg);
+  top: 0;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
 .account-btn {
     width: 29px;
     height: 29px;
@@ -533,7 +587,7 @@ margin: 0 0 28px 0;
     max-width: 1600px;
     min-height: 448px;
     background-image: linear-gradient(rgba(244,244,244, 0.7), rgba(244,244,244, 0.7)), 
-    url(../img/Layer-41.png);
+    url(../img/layer-subscribe.png);
     display: flex;
     justify-content: space-around;
     align-items: center;
